# ci-framework

./: .ansible-lint  .coveragerc  .dnm  .gitignore  .gitlint  .gitreview  .pre-commit-config.yaml  .readthedocs.yaml  .spellcheck.yml  .zuul.yaml  19.0-beta-changes.md  AGENTS.md  CONTRIBUTING.md  MULTI-STAGE-STACKVIZ-EXAMPLE.md  Makefile  OWNERS  OWNERS_ALIASES  QUICKSTART_UPDATE_PACKAGES.md  README.md  RELEASE_CADENCE.md  STACKVIZ-INTEGRATION-SUMMARY.md  USAGE.md  ansible-requirements.txt  ansible.cfg  bindep.txt  cert_verify.yml  clean_openstack_deployment.yaml  cleanup-edpm.yml  cleanup-openstack-for-reuse.yml  common-requirements.txt  create-infra.yml  deploy-edpm-reuse.yaml  deploy-edpm.yml  deploy-ocp.yml  deploy-osp-adoption.yml  deploy-tmp-va.yml  dev-local-env.yml  galaxy.yml  molecule-requirements.txt  plugins  (+18 more)
.githooks/: post-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.zuul.d/: collect-logs.yml  dump_zuul_vars.yml  e2e-run.yml  molecule-prepare.yml  molecule-test.yml  prepare.yml  test-molecule.yml
_skeleton_role_/: README.md.j2
containerfiles/: Containerfile.ci  Containerfile.client  Containerfile.tests  README.md
custom/: README.md
docs/: Makefile_orig  doc-requirements.txt  toolbelt-catalog.yaml
gitlint_rules/: README.md  deprecation_rules.py
group_vars/: all.yml
olm-deps/: cert-manager.yaml
openstack-operators/: tempest_allow.yml  tempest_skip.yml
playbooks/: 01-bootstrap.yml  02-infra.yml  03-build-packages.yml  04-build-containers.yml  05-build-operators.yml  06-deploy-architecture.yml  06-deploy-edpm.yml  dcn.yml  (+32 more)
(+3733 files in other folders)
