[metadata]
name = ci_framework
author = Red Hat
summary = CI Framework - used for CI, QE and Devs to run jobs in a converged way
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/openstack-k8s-operators/ci-framework
project_urls =
    Documentation = https://ci-framework.readthedocs.io/en/latest/
    Source Code = https://github.com/openstack-k8s-operators/ci-framework
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python


[options]
install_requires =
    pyaml
    importlib-metadata; python_version < "3.8"
packages = find:

[options.packages.find]
where=ci_framework/plugins
include=*.py
